[gd_scene load_steps=3 format=3 uid="uid://f2tca3d1cn16"]

[ext_resource type="Script" path="res://src/Menu.gd" id="1_0c8cn"]
[ext_resource type="StyleBox" uid="uid://biw2ou6apbubg" path="res://assets/basic.stylebox" id="2_fcs3w"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0c8cn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.305882)

[node name="MenuContainer" type="MarginContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -143.5
offset_right = 109.0
offset_bottom = 143.5
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 200

[node name="MarginContainer" type="PanelContainer" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("2_fcs3w")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MenuContainer/MarginContainer"]
layout_mode = 2

[node name="CashLabel" type="Label" parent="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "$100"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="PartyButton" type="Button" parent="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer" groups=["disableable"]]
unique_name_in_owner = true
layout_mode = 2
text = "Party"

[node name="ItemsButton" type="Button" parent="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer" groups=["disableable"]]
unique_name_in_owner = true
layout_mode = 2
text = "Items"

[node name="EquipmentButton" type="Button" parent="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer" groups=["disableable"]]
unique_name_in_owner = true
layout_mode = 2
text = "Equipment"

[node name="SaveButton" type="Button" parent="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer" groups=["disableable"]]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer" groups=["disableable"]]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[node name="SettingsButton" type="Button" parent="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer" groups=["disableable"]]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer" groups=["disableable"]]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[node name="CloseButton" type="Button" parent="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="DebugButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.5
offset_top = -27.0
offset_right = 28.5
grow_horizontal = 2
grow_vertical = 0
text = "Debug"

[node name="SettingsPanel" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 480.0
offset_top = 270.0
offset_right = 710.0
offset_bottom = 340.0
theme_override_styles/panel = ExtResource("2_fcs3w")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SettingsPanel"]
layout_mode = 2

[node name="FullscreenCheckButton" type="CheckButton" parent="CanvasLayer/SettingsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/SettingsPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="CanvasLayer/SettingsPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -311.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MarginContainer2"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ReminderLabel" type="Label" parent="CanvasLayer/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reminder of what to do next goes here"

[connection signal="pressed" from="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="toggled" from="CanvasLayer/SettingsPanel/VBoxContainer/FullscreenCheckButton" to="." method="_on_fullscreen_check_button_toggled"]
[connection signal="value_changed" from="CanvasLayer/SettingsPanel/VBoxContainer/HBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
